--- a/views/_footer.ejs
+++ b/views/_footer.ejs
@@ -1,5 +1,5 @@
 <nav class="navbar fixed-bottom navbar-dark bg-dark" style="opacity: 0.6;">
     <div class="container-fluid">
-      <a class="navbar-brand display-6" href="#">Copyright @Divya Singh Shah</a>
+      <a class="navbar-brand display-6" href="#">Copyright @Divya Singh Shah,Disha Sharma</a>
     </div>
   </nav>
