--- a/views/allCustomers.ejs
+++ b/views/allCustomers.ejs
@@ -32,7 +32,7 @@
                         <td><%= c.name %></td>
                         <td><%=c.email %></td>
                         <td><%=c.address %></td>
-                        <td><%=c.currentBal %></td>
+                        <td><span>&#8377 </span><%=c.currentBal %></td>
                         <td><a href="customers/<%= c.accNo %>" type="button" class="btn btn-primary">Show Details</a></td>
                       </tr>
 
