--- a/views/customer.ejs
+++ b/views/customer.ejs
@@ -28,7 +28,7 @@
                       <p class="card-text">Date of Birth:  <%= customer.dob.toDateString() %></p>
                         <p class="card-text">Email ID:  <%= customer.email %></p>
                         <p class="card-text">Gender:  <%= customer.gender %></p>
-                        <p class="card-text">Gender:  <%= customer.address %></p>
+                        <p class="card-text">Address:  <%= customer.address %></p>
                         <p class="card-text">Phone:  <%= customer.phone %></p>
                     </div>
                   </div>
