--- a/views/home.ejs
+++ b/views/home.ejs
@@ -17,7 +17,7 @@
 
         
 
-            <h1 class="text-center display-1 p-5">Welcome to Bank of Sparks</h1>
+            <h1 class="text-center display-1 p-5">Welcome to Bank of Uttarakhand</h1>
             <div id="imageContainer" class="row">
                 <div class="col-md-6">
                     <img src="img/home.jpeg" alt="" height="100%" width="100%">
